mikec/tests/Pass/1_line/arrays/7.mc
/*Array of length 1*/
int main(int g, char z){
int b[1];
}
