mikec/tests/FAIL/array/8.mc
/*initialize 2d array without length*/
int main(){
    int g[][] = {{1,2,3},{3,2,1}};
}
